cluster/pgadmin/deployment-pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  namespace: pgadmin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: PGADMIN_CONFIG_AUTO_DISCOVER_SERVERS
              value: "False"
            - name: PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED
              value: "True"
            - name: PGADMIN_CONFIG_MAIL_PORT
              value: "587"
            - name: PGADMIN_CONFIG_MAIL_USE_TLS
              value: "True"
            - name: PGADMIN_CONFIG_SECURITY_EMAIL_SENDER
              value: '"pgadmin@nvaughn.email"'
            - name: PGADMIN_CONFIG_AUTHENTICATION_SOURCES
              # value: '["oauth2", "internal"]'
              value: '["oauth2"]'
          image: cr.nathanv.app/docker.io/dpage/pgadmin4:9.17
          name: pgadmin
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: pgadmin-vol-data
            - mountPath: /pgadmin4/config_local.py
              name: pgadmin-vol-oauth
              subPath: config_local.py
              readOnly: true
      volumes:
        - name: pgadmin-vol-data
          persistentVolumeClaim:
            claimName: pgadmin-pvc-data
        - name: pgadmin-vol-oauth
          secret:
            secretName: pgadmin-oauth
