cluster/pgadmin/deployment-postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgadmin-postgresql-deployment
  namespace: pgadmin
spec:
  replicas: 1
  serviceName: pgadmin-postgresql
  selector:
    matchLabels:
      app: pgadmin-postgresql
  template:
    metadata:
      labels:
        app: pgadmin-postgresql
    spec:
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: POSTGRES_USER
              value: pgadmin
            - name: POSTGRES_DB
              value: pgadmin
          image: cr.nathanv.app/docker.io/library/postgres:18.6
          name: postgresql
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/
              name: postgresql-vol
      volumes:
        - name: postgresql-vol
          persistentVolumeClaim:
            claimName: pgadmin-pvc-postgresql
