cluster/pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  namespace: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      nodeSelector:
        role: apps
      containers:
      - env:
        - name: PGADMIN_CONFIG_AUTO_DISCOVER_SERVERS
          value: "False"
        - name: PGADMIN_CONFIG_MAIL_PORT
          value: "587"
        - name: PGADMIN_CONFIG_MAIL_USE_TLS
          value: "True"
        - name: PGADMIN_CONFIG_SECURITY_EMAIL_SENDER
          value: '"pgadmin@nvaughn.email"'
        image: docker.io/dpage/pgadmin4:8.14
        name: pgadmin
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/lib/pgadmin
          name: pgadmin-vol-data
      volumes:
      - name: pgadmin-vol-data
        persistentVolumeClaim:
          claimName: pgadmin-pvc-data
