cluster/pgadmin/service-pgadmin.yaml
apiVersion: v1
kind: Service
metadata:
    name: pgadmin-service
    namespace: pgadmin
spec:
    type: ClusterIP
    selector:
        app: pgadmin
    ports:
      - port: 80
        protocol: TCP
