cluster/pgadmin/service-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-postgresql-service
  namespace: pgadmin
spec:
  type: ClusterIP
  selector:
    app: pgadmin-postgresql
  ports:
    - port: 5432
      protocol: TCP
